--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body::before {
   left: 0;
   height: 100%;
   width: 100%;
-  background: rgba(0,0,0,0.1);
+  background: rgba(0,0,0,0.3);
+  border-radius: 10px;
   z-index: -1;
 }
 
